# underdocksoporteapp

./: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  latest.json.example
infra/rustdesk/: docker-compose.yml
infra/supabase/: schema.sql
scripts/: quick-diagnostic.ps1  sample-update-manifest.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  main.rs
src/components/: AdminDevicesPage.tsx  AdminLayout.tsx  AdminLogin.tsx  ClientActivation.tsx  ClientHome.tsx  CustomTitlebar.tsx  PairDevicePanel.tsx  PasswordRecovery.tsx  UpdateNotice.tsx
src/lib/: admin.ts  agent.ts  backend.ts  diagnostics.ts  domain.ts  errorLogs.ts  support.ts  tauri.ts  updates.ts
tools/rustdesk/: README.md
