[package]
name = "underdock"
version = "0.1.26"
description = "UnderDock desktop support app"
authors = ["Ratwaredev"]
edition = "2021"

[lib]
name = "underdock_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"
